infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espp-web
  namespace: espp
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - espp.exemplo.go.gov.br
        - api-espp.exemplo.go.gov.br
      secretName: espp-tls
  rules:
    - host: espp.exemplo.go.gov.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: espp-app
                port:
                  name: http
    - host: api-espp.exemplo.go.gov.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: espp-api
                port:
                  name: http
